fix white contrast on map and controls icon and text

--- a/styles/main.css
+++ b/styles/main.css
@@ -6,6 +6,7 @@
   text-align: center;
   color: white;
   display: none;
+  text-shadow: 2px 2px 1px rgba(0,0,0, 1);
 }
 img:hover + .buttontext {
     display: block;
@@ -127,6 +128,20 @@ body {
   cursor: pointer;
 }
 
+.btn-primary-outline:hover{ 
+  background: #ffffff;
+}
+
+.btn-message-submit {
+  background-color: #0961B2; /*blue*/
+  color: #ffffff;
+}
+
+.btn-message-none {
+  background-color: #A04843; /*maroon - matches navbar links*/
+  color: #ffffff;
+}
+
 canvas { width: 100%; height: 100% }
 
 .form-control {
@@ -172,3 +187,13 @@ navbar {
 .message textarea.form-control {
   width: 90%;
 }
+
+@media (min-width: 700px) and (max-height: 700px) {
+  .ctrlModal {
+    font-size: 80%;
+    bottom: 200px;
+    width: 200px;
+  }
+
+}
+
